test/errors/type/collections/set/add2.yasl
const x = collections.set()

x->add([])
